--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/tickets?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=MySQL@12498
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.thymeleaf.cache=false
+server.port=8081
